added menu burger

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
           <a class="header-nav__logo" href="">
             <img src="img/icons/logo.svg" alt="logo">
           </a>
-          <ul class="header-nav__menu">
-            <li class="header-nav__item"><a class="header-nav__link" href="">About us</a></li>
-            <li class="header-nav__item"><a class="header-nav__link" href="">Practice areas</a></li>
-            <li class="header-nav__item"><a class="header-nav__link" href="">Case results</a></li>
-            <li class="header-nav__item"><a class="header-nav__link" href="">Terms</a></li>
-            <li class="header-nav__item"><a class="header-nav__link" href="">Services</a></li>
-          </ul>
-          <div class="header-nav__wrapper">
-            <a class="header-nav__log-in" href="">Login</a>
-            <a class="header-nav__sign" href="">Signup</a>
+          <div class="header-nav__wrap">
+            <ul class="header-nav__menu">
+              <li class="header-nav__item"><a class="header-nav__link" href="">About us</a></li>
+              <li class="header-nav__item"><a class="header-nav__link" href="">Practice areas</a></li>
+              <li class="header-nav__item"><a class="header-nav__link" href="">Case results</a></li>
+              <li class="header-nav__item"><a class="header-nav__link" href="">Terms</a></li>
+              <li class="header-nav__item"><a class="header-nav__link" href="">Services</a></li>
+            </ul>
+            <div class="header-nav__wrapper">
+              <a class="header-nav__log-in" href="">Login</a>
+              <a class="header-nav__sign" href="">Signup</a>
+            </div>
           </div>
           <button class="header-nav__btn">
             <span class="header-nav__span"></span>
@@ -62,7 +64,7 @@
       </div>
     </div>
   </header>
-  <main class="main">
+  <!-- <main class="main">
     <section class="partners">
       <div class="container">
         <div class="partners__inner">
@@ -208,7 +210,8 @@
         </div>
       </div>
     </section>
-    <footer class="footer">
+  </main>
+  <footer class="footer">
       <div class="footer-top">
         <div class="container">
           <div class="footer-top__inner">
@@ -308,8 +311,7 @@
           </div>
         </div>
       </div>
-    </footer>
-  </main>
+  </footer> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="js/app.js"></script>
