--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </div>
   </header>
-  <!-- <main class="main">
+   <main class="main">
     <section class="partners">
       <div class="container">
         <div class="partners__inner">
@@ -85,7 +85,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> 
     <section class="about">
       <div class="container">
         <div class="about__inner">
@@ -311,7 +311,7 @@
           </div>
         </div>
       </div>
-  </footer> -->
+  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="js/app.js"></script>
